// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Person gets a single person when querying by root node 1`] = `
Object {
  "data": Object {
    "node": Object {
      "birthDate": "1987-11-06T00:00:00",
      "birthDay": 6,
      "birthMonth": 11,
      "birthYear": 1987,
      "email": "isaac.hardy@newspring.cc",
      "firstName": "Isaac",
      "id": "e812510c2fe5ed7b099fd1284df96615",
      "lastName": "Hardy",
      "nickName": "Isaac",
    },
  },
}
`;

exports[`Person gets people by an email 1`] = `
Object {
  "data": Object {
    "people": Array [
      Object {
        "birthDate": "1987-11-06T00:00:00",
        "birthDay": 6,
        "birthMonth": 11,
        "birthYear": 1987,
        "email": "isaac.hardy@newspring.cc",
        "firstName": "Isaac",
        "id": "e812510c2fe5ed7b099fd1284df96615",
        "lastName": "Hardy",
        "nickName": "Isaac",
      },
    ],
  },
}
`;
